## Change history


* (fixed) Avoid the raise of exceptions for some degenerated cases in the MLine.Explode method.
* (fixed) A few issues with the MLine.Explode method.


[2019/03/06] 
* Added Explode method to Insert entity. A few entities might not appear as expected when a non-uniform and/or negative scaling is applied, read the TransformBy method documentation of each entity.
* Added Explode method to MLine entity. It will convert the actual mline to its Line and Arcs components.
* Added TransformBy method to EntityObjects, Attributes and AttributeDefinitions classes.
* Added property IsIdentity to Matrix3. This value will only be true for matrices initialized as the identity. This will allow to avoid unnecessary multiplications during transformations.
* Added two new constructors to the Underlay class that takes also the position and scale.
* Polyline entities now can be used to create a HatchBoundaryPath.
* The Underlay scale is now a Vector2 and its components must be greater than zero, the Z value has no use.
* The Insert vector scale components cannot be zero.
* Renamed EntityType.LightWeightPolyline to EntityType.LwPolyline for short and same name as the class.
* Renamed PolyfaceMeshVertex.Location to PolyfaceMeshVertex.Position as it is in similar cases.
* Renamed MLineVertex.Location to MLineVertex.Position as it is in similar cases.
* Renamed MLineStyleFlags.StartSquareEndCap to MLineStyleFlags.StartSquareCap.
* Renamed MLineStyleFlags.ShowMiters to MLineStyleFlags.DisplayJoints this is the name given in the AutoCad UI and it is a more accurate definitions. This options does not include the miters line at the start and end vertexes only the inner corners.
* (fixed) The MLineStyleElements needs to be ordered from larger to smaller offset values.
* (fixed) Bug when creating boundary paths for hatches when the normal was not the UnitZ (0,0,1).